pipeline/domain_management/egress.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: external

---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -sar2
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - "jupyter"

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -sar2
  namespace: jupyter
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: sar2
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -sar1
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - "jupyter"

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -sar1
  namespace: jupyter
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: sar1
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -sar1
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - "jupyter"

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -sar1
  namespace: jupyter
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: sar1
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -sar1
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - "jupyter"

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -sar1
  namespace: jupyter
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: sar1
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -sar1
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - "jupyter"

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -sar1
  namespace: jupyter
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: sar1
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---

apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: -
  namespace: external
spec:
  hosts:
  ports:
    - number: 80
      name: http
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
  exportTo:
    - "."
    - ""

---

apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: -
  namespace: 
spec:
  outboundTrafficPolicy: 
    mode: "REGISTRY_ONLY"
  workloadSelector:
    labels:
      se-lab: 
      se-profile: 
  egress:
    - hosts:

---
